--- a/src/main/resources/TODO.txt
+++ b/src/main/resources/TODO.txt
@@ -1,5 +1,5 @@
-test player list
 historique sanctions
 warns system sanction
 make boss bar display cleaner (*)
-convert utils (132000 -> 132k)
+registerevent fix multiple players with same name/last name WTF??
+vanish system fucked up
