--- a/src/main/resources/TODO.txt
+++ b/src/main/resources/TODO.txt
@@ -1,5 +1,5 @@
 historique sanctions
 warns system sanction
 make boss bar display cleaner (*)
-registerevent fix multiple players with same name/last name WTF??
-vanish system fucked up
+registerevent fix multiple players with same name/last name WTF?
+zip log files after day as passed
